<resources>
    <string name="app_name">MythTV Lean Frontend</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_videolist">Media</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_search">Search</string>
    <string name="menu_recrules">Rules</string>
    <string name="menu_upcoming">Upcoming</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_guide">Guide</string>
    <string name="menu_show_all">Show All</string>
    <string name="menu_schedule">Schedule Recording</string>
    <string name="menu_override">Override Recording</string>
    <string name="hint_guide_search">Search the Guide …</string>
    <string name="row_header_channels">Channels</string>
    <string name="all_title">All</string>
    <string name="recents_title">Recently Viewed</string>
    <string name="group_videos">Videos</string>
    <string name="recgroup_title">Recording Group</string>
    <string name="error_cannot_play">Error: Cannot play the video.</string>
    <string name="msg_no_connection">Error: No Connection to MythTV Backend.</string>
    <string name="msg_no_delayshutdown">Warning: Unable to prevent backend idle shutdown.</string>
    <string name="msg_backend_login_req">Error: Backend Requires Valid User Name and Password.</string>
    <string name="msg_wake_backend">No backend connection, sent wake-up message.</string>
    <string name="pberror_title">Playback Failed.</string>
    <string name="pberror_remote">Error occurred in a remote component.</string>
    <string name="pberror_renderer">Error occurred in a Renderer.</string>
    <string name="pberror_source">Error loading data from the MediaSource.</string>
    <string name="pberror_unexpected">Unexpected Runtime Exception</string>
    <string name="pberror_default">Unknown error.</string>
    <string name="pberror_file_length_fail">Unable to obtain file length.</string>
    <string name="pberror_recommend_ffmpeg">To play this track: In leanfront Settings -&gt; Audio
        Decode, select FFmpeg.</string>
    <string name="pberror_recommend_audio">Unsupported Audio: In leanfront Settings -&gt; Audio Decode,
        select Auto or FFmpeg or else change your Android audio settings.</string>
    <string name="pberror_extractor_array">Error: OutOfBoundsException in BundledExtractorsAdapter.</string>
    <string name="pberror_button_continue">Continue</string>
    <string name="pberror_button_exit">Exit</string>
    <string name="title_comm_playing">Commercial or Cut Playing</string>
    <string name="menu_comm_skip">Skip</string>
    <string name="menu_comm_notskip">Do not Skip</string>
    <string name="title_select_audiosync">Adjust Audio Sync</string>
    <string name="title_program_guide">Program Guide</string>
    <string name="guide_channel">Channel</string>
    <string name="guide_select" translatable="false">📅🕒</string>
    <string name="guide_noprog">There is no listing in that slot.</string>
    <string name="title_chan_group">Channel Group:</string>
    <string name="note_program_continuation">(cont)</string>
    <string name="msg_edit_schedule">Edit Schedule for %1$s</string>
    <string name="msg_edit_schedule2">Edit Schedule for %1$s (2)</string>
    <string name="menu_new_recrule">New Recording Rule</string>
    <string name="menu_new_template">New Recording Template</string>
    <string name="title_recrules">Recording Rules</string>
    <string name="recrule_DonotRecord">Do not Record</string>
    <string name="recrule_NotRecording">Not Recording</string>
    <string name="recrule_OverrideRecording">Override Recording</string>
    <string name="recrule_RecordAll">Record All</string>
    <string name="recrule_RecordDaily">Record Daily</string>
    <string name="recrule_RecordOne">Record One</string>
    <string name="recrule_RecordWeekly">Record Weekly</string>
    <string name="recrule_RecordingTemplate">Recording Template</string>
    <string name="recrule_SingleRecord">Single Record</string>
    <string name="recrule_template">Template</string>
    <string name="recrule_last">Last Recorded:</string>
    <string name="recrule_next">Next Recording:</string>
    <string name="recrule_inactive">Inactive</string>
    <string name="sort_exclude_1">THE</string>
    <string name="sort_exclude_2">A</string>
    <string name="sort_exclude_3">AN</string>
    <string name="title_commskip">Commercial or Cut Skip</string>
    <string name="menu_commskip_off">Off</string>
    <string name="menu_commskip_notify">Notify</string>
    <string name="menu_commskip_skip">Automatically Skip</string>
    <string name="pref_commskip_start">Start Position Adjustment (seconds)</string>
    <string name="pref_commskip_end">End Position Adjustment (seconds)</string>
    <string name="msg_commskip_none">There is no Commercial Break or Cut List Data for this Recording.</string>
    <string name="msg_commskip_start">Start of Commercial Break</string>
    <string name="msg_commskip_end">End of Commercial Break</string>
    <string name="msg_commskip_last">No More Commercial Breaks</string>
    <string name="msg_commskip_skipped">Commercial Break Skipped</string>
    <string name="msg_commskip_back">Back to where you were</string>
    <string name="msg_commskip_start_show">Start of Show</string>
    <string name="pref_title_backend_ip">IP Address or DNS name</string>
    <string name="pref_title_backend">MythTV Backend</string>
    <string name="pref_title_myth_port">MythTV Backend Port</string>
    <string name="pref_title_http_port">Status Port</string>
    <string name="pref_title_backend_userid">User Name</string>
    <string name="pref_title_backend_passwd">Password</string>
    <string name="pref_title_backend_mac">Wakeup MAC Address</string>
    <string name="pref_title_playback">Playback</string>
    <string name="pref_max_vids">Maximum Recordings &amp; Videos to load</string>
    <string name="pref_ff_title">Audio Decode</string>
    <string name="pref_ff_video_title">Video Decode</string>
    <string name="pref_decode_auto">Auto select</string>
    <string name="pref_decode_mediacodec">Mediacodec</string>
    <string name="pref_decode_ffmpeg">FFmpeg</string>
    <string name="pref_title_skip_fwd">Skip Forward Seconds</string>
    <string name="pref_title_skip_back">Skip Back Seconds</string>
    <string name="pref_poss_empty">Ignore Extra Track</string>
    <string name="pref_num_cc_chans">Number of CEA closed caption tracks</string>
    <string name="pref_title_jump">Jump Back/Forward Minutes</string>
    <string name="pref_title_prevnext">Use for &#9198; and &#9197; icons.</string>
    <string name="pref_entry_prevnext_jump">Jump</string>
    <string name="pref_entry_prevnext_comskip">Skip Commercial</string>
    <string name="pref_value_prevnext_jump">jump</string>
    <string name="pref_value_prevnext_comskip">skipcom</string>
    <string name="pref_title_lists">Program List Options</string>
    <string name="pref_seq">Sort by</string>
    <string name="pref_seq_orig_airdate">Original Air Date</string>
    <string name="pref_seq_recorded_date">Recorded Date</string>
    <string name="pref_seq_ascdesc">Sort Order</string>
    <string name="pref_seq_ascending">Sort Ascending</string>
    <string name="pref_seq_descending">Sort Descending</string>
    <string name="pref_hide_watched">Hide Watched Shows</string>
    <string name="pref_tweaks_title">Advanced</string>
    <string name="pref_tweaks_desc">Please read the documentation before changing TS Search Packets.</string>
    <string name="pref_tweak_ts_search_pkts">TS Search Packets (default 2600)</string>
    <string name="pref_drag_range">Drag Seek Range Minutes</string>
    <string name="pref_drag_range_desc">Maximum number of minutes to seek when dragging the full width of playback</string>
    <string name="pref_drag_accel">Drag Acceleration</string>
    <string name="pref_drag_accel_desc">Set 1.0 for linear dragging. Set a higher value for exponential acceleration.</string>
    <string name="pref_duration_textsize">Playback Progress Text Size in Landscape Orientation</string>
    <string name="pref_land_bottomnav">Show Bottom Navigation in Landscape Mode.</string>
    <string name="pref_startview_title">App Startup View</string>
    <string name="pref_guide_title">Program Guide</string>
    <string name="pref_guide_timeslots">Number of half-hour time slots in each guide page</string>
    <string name="sdef_livetv_rowsize" translatable="false">100</string>
    <string name="sdef_http_port" translatable="false">6544</string>
    <string name="sdef_video_parental" translatable="false">4</string>
    <string name="sdef_audio" translatable="false">auto</string>
    <string name="sdef_video" translatable="false">auto</string>
    <string name="sdef_skip_fwd" translatable="false">60</string>
    <string name="sdef_skip_back" translatable="false">10</string>
    <string name="sdef_tweak_ts_search_pkts" translatable="false">2600</string>
    <string name="sdef_drag_range" translatable="false">20</string>
    <string name="sdef_drag_accel" translatable="false">3.5</string>
    <string name="sdef_duration_textsize" translatable="false">14</string>
    <string name="sdef_commskip" translatable="false">0</string>
    <string name="sdef_commskip_start" translatable="false">0</string>
    <string name="sdef_commskip_end" translatable="false">0</string>
    <string name="sdef_num_cc_chans" translatable="false">2</string>
    <string name="sdef_jump" translatable="false">5</string>
    <string name="sdef_prevnext" translatable="false">jump</string>
    <string name="sdef_seq" translatable="false">starttime</string>
    <string name="sdef_seq_ascdesc" translatable="false">asc</string>
    <string name="sdef_startview" translatable="false">videolist</string>
    <string name="sdef_guide_timeslots" translatable="false">8</string>
    <string name="resume_last">Play from last play position</string>
    <string name="play">Play from start</string>
    <string name="menu_mark_unwatched">Mark as Unwatched</string>
    <string name="sched_use_template">Use Template</string>
    <string name="sched_search_type">Search Type</string>
    <string name="sched_title">Title</string>
    <string name="sched_subtitle">Subtitle</string>
    <string name="sched_description">Description</string>
    <string name="sched_channel">Channel</string>
    <string name="sched_dttime">Start Date and Time</string>
    <string name="sched_duration">Duration in Minutes</string>
    <string name="sched_rec_group">Recording Group</string>
    <string name="sched_active_msg">Recording Rule is Active</string>
    <string name="sched_play_group">Playback Group</string>
    <string name="sched_start_offset">Number of Extra Minutes Record at Start</string>
    <string name="sched_end_offset">Number of Extra Minutes Record at End</string>
    <string name="sched_new_only">Record New Episodes Only</string>
    <string name="sched_priority">Priority</string>
    <string name="sched_input">Preferred Input</string>
    <string name="sched_dupmethod">Duplicate Match Method</string>
    <string name="sched_dupscope">Duplicate Search Scope</string>
    <string name="sched_autoextend">Auto Extend</string>
    <string name="sched_filters">Filter Options</string>
    <string name="sched_rec_profile">Recording Profile</string>
    <string name="sched_storage_grp">Storage Group</string>
    <string name="sched_max_to_keep">Maximum Number of Episodes to Keep</string>
    <string name="sched_max_newest">Deletion on Maximum Episodes</string>
    <string name="sched_max_newest_note">If unchecked, stop recording when maximum episodes are reached.</string>
    <string name="sched_auto_expire">Auto Expire</string>
    <string name="sched_pp_title">Post Processing Options</string>
    <string name="sched_metadata_id">Series or Movie Id</string>
    <string name="close">Close</string>
    <string name="save">Save</string>
</resources>