<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_videolist">

    <fragment
        android:id="@+id/nav_videolist"
        android:name="org.mythtv.lfmobile.ui.videolist.VideoListFragment"
        android:label="@string/menu_videolist"
        tools:layout="@layout/fragment_videolist" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="org.mythtv.lfmobile.ui.settings.SettingsFragment"
        android:label="@string/menu_settings" />

    <fragment
        android:id="@+id/nav_guide"
        android:name="org.mythtv.lfmobile.ui.guide.GuideFragment"
        android:label="@string/menu_guide" />

    <fragment
        android:id="@+id/nav_upcoming"
        android:name="org.mythtv.lfmobile.ui.proglist.ProgramListFragment"
        android:label="@string/menu_upcoming" />

    <fragment
        android:id="@+id/nav_search"
        android:name="org.mythtv.lfmobile.ui.proglist.ProgramListFragment"
        android:label="@string/menu_search" />

    <fragment
        android:id="@+id/nav_schedule"
        android:name="org.mythtv.lfmobile.ui.schedule.ScheduleFragment"
        android:label="@string/menu_schedule" />


</navigation>