<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_videolist"
            android:icon="@drawable/ic_gallery_black_24dp"
            android:title="@string/menu_videolist"
            app:showAsAction="ifRoom"/>
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/menu_settings"
            app:showAsAction="ifRoom"/>
        <item
            android:id="@+id/nav_guide"
            android:icon="@drawable/ic_guide_24px"
            android:title="@string/menu_guide" />
<!--        <item-->
<!--            android:id="@+id/nav_recrules"-->
<!--            android:icon="@drawable/ic_rules_24px"-->
<!--            android:title="Rules" />-->
        <item
            android:id="@+id/nav_upcoming"
            android:icon="@drawable/ic_upcoming_24px"
            android:title="@string/menu_upcoming"
            app:showAsAction="ifRoom"/>

    </group>
</menu>